# cpp-test-template

./: CMakeLists.txt  README.md
include/: accumulator.h  helloworld.h
src/: accumulator.cpp  helloworld.cpp
test/: test_helloworld.cpp  test_helloworld2.cpp  test_helloworld_2.cpp  test_main.cpp
